# todo-hud-mcp

./: .clang-format  .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy.yml
apps/api/: .dockerignore  Dockerfile  package-lock.json  package.json
apps/api/scripts/: mcp-smoke-test.ps1
apps/api/src/: main.ts
apps/api/src/common/filters/: http-exception.filter.ts
apps/api/src/modules/tasks/application/: index.ts
apps/api/src/modules/tasks/infrastructure/: tasks.module.ts
apps/desktop/: CMakeLists.txt  CMakePresets.json  README.md
apps/desktop/scripts/: launch-focus-hud.ps1  verify.ps1
apps/desktop/src/: main.cpp
apps/desktop/src/app/: TaskController.cpp  TaskController.h  TaskModel.cpp  TaskModel.h
apps/desktop/src/application/: TaskEventsClient.h  TaskRepository.h  TaskService.cpp  TaskService.h
apps/desktop/src/domain/: Task.h
apps/desktop/src/infrastructure/: ApiTaskRepository.cpp  ApiTaskRepository.h  InMemoryTaskRepository.cpp  InMemoryTaskRepository.h  WebSocketClient.cpp  WebSocketClient.h
apps/desktop/src/presentation/: AppController.cpp  AppController.h  FocusTimerController.cpp  FocusTimerController.h  TaskListModel.cpp  TaskListModel.h
apps/desktop/src/qml/: Main.qml
apps/desktop/src/qml/components/: FocusButton.qml  HistoryPanel.qml  HudCard.qml  TaskItem.qml
apps/desktop/src/qml/theme/: Theme.qml
docs/: deploy-vps.md
docs/adr/: 0001-monorepo-structure.md
scripts/: api-smoke-test.ps1
src/: app.module.ts  main.ts
src/health/: health.controller.ts
src/modules/tasks/application/ports/: base.repository.ts  config.repository.ts  focus-session.repository.ts  index.ts  tasks-repository.port.ts
src/modules/tasks/application/use-cases/: complete-task.use-case.spec.ts  complete-task.use-case.ts  create-task.use-case.spec.ts  delete-task.use-case.ts  get-task.use-case.spec.ts  index.ts  reopen-task.use-case.ts
src/modules/tasks/domain/exceptions/: task-not-found.error.ts
src/modules/tasks/domain/models/: index.ts
src/modules/tasks/infrastructure/: tasks.module.ts
src/modules/tasks/infrastructure/adapters/: index.ts
src/modules/tasks/infrastructure/controllers/: tasks.controller.ts
src/modules/tasks/infrastructure/mcp/: mcp.controller.ts  mcp.handler.service.ts  tasks-mcp-server.mts
(+37 files in other folders)
